# fluxus

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml
benches/: runtime_benchmark.rs
crates/fluxus/: Cargo.toml  README.md
crates/fluxus-api/: Cargo.toml  README.md
crates/fluxus-api/src/: lib.rs
crates/fluxus-api/src/io/: collection_sink.rs  collection_source.rs  mod.rs
crates/fluxus-api/src/operators/: filter.rs  flat_map.rs  map.rs  mod.rs  window_aggregator.rs  window_skipper.rs  window_sorter.rs
crates/fluxus-api/src/source/: transform_source.rs  transform_source_with_operator.rs
crates/fluxus-api/src/stream/: datastream.rs  mod.rs  windowed_stream.rs
crates/fluxus-api/tests/: datastream.rs  datastreams.rs  datastreams_test.rs  filter_test.rs  integrition_test.rs  windowed_stream_test.rs
crates/fluxus-core/: Cargo.toml  README.md
crates/fluxus-core/src/: config.rs  lib.rs  metrics.rs  models.rs
crates/fluxus-core/src/error_handling/: backpressure.rs  mod.rs  retry_strategy.rs
crates/fluxus-core/src/operator/: builder.rs  filter.rs  mod.rs  window_reduce.rs
crates/fluxus-core/src/pipeline/: dummy_sink.rs  mod.rs  processor.rs  status.rs
crates/fluxus-core/src/sink/: buffered.rs  console.rs  file.rs  mod.rs
crates/fluxus-core/src/source/: csv.rs  generator.rs
crates/fluxus-runtime/: Cargo.toml  README.md
crates/fluxus-runtime/src/: runtime.rs  watermark.rs
crates/fluxus-sinks/: Cargo.toml  README.md
crates/fluxus-sinks/src/: buffered.rs  console.rs  dummy_sink.rs  file.rs  lib.rs  telegram.rs
crates/fluxus-sources/: Cargo.toml  README.md
crates/fluxus-sources/src/: csv.rs  generator.rs  gharchive.rs  lib.rs
crates/fluxus-sources/tests/: test_gharchive.rs
crates/fluxus-transformers/: Cargo.toml  README.md
crates/fluxus-transformers/src/: lib.rs  transform_base.rs  transform_source.rs  transform_source_with_operator.rs
crates/fluxus-transformers/src/operator/: builder.rs  filter.rs  map.rs  mod.rs  window_match.rs  window_reduce.rs
crates/fluxus-utils/: Cargo.toml  README.md
crates/fluxus-utils/src/: error_converters.rs  lib.rs  models.rs  telegram_bot.rs  time.rs  window.rs
crates/fluxus/src/: lib.rs
docs/: DESIGN.md  Logo.md
examples/: README.md
examples/click-stream/: Cargo.toml  README.md
examples/click-stream/src/: main.rs
examples/event-timestamp/: Cargo.toml  README.md
examples/event-timestamp/src/: main.rs
examples/github-archive/: Cargo.toml
examples/github-archive/src/: main.rs
examples/iot-devices/: Cargo.toml  README.md
examples/iot-devices/src/: main.rs
examples/log-anomaly/: Cargo.toml  README.md
examples/log-anomaly/src/: main.rs
examples/network-log/: Cargo.toml  README.md
examples/network-log/src/: main.rs
examples/remote-csv/: Cargo.toml  README.md
examples/remote-csv/src/: main.rs
examples/stock-market/: Cargo.toml  README.md
examples/stock-market/src/: main.rs
examples/temperature-sensor/: Cargo.toml  README.md
examples/temperature-sensor/src/: main.rs
examples/word-count/: Cargo.toml  README.md
examples/word-count/src/: main.rs
fluxus-api/: Cargo.toml
fluxus-api/src/: lib.rs
fluxus-api/src/io/: collection_sink.rs
fluxus-api/src/operators/: mod.rs  window_aggregator.rs
fluxus-api/src/source/: mod.rs
fluxus-core/: Cargo.toml  README.md
fluxus-core/src/: lib.rs  models.rs  window.rs
fluxus-core/src/operator/: map.rs  window_reduce.rs
fluxus-core/src/pipeline/: dummy_sink.rs  processor.rs
fluxus-core/src/sink/: console.rs  error_converters.rs
fluxus-core/src/source/: mod.rs
fluxus-examples/: Cargo.toml  README.md
fluxus-examples/src/: click_stream.rs  iot_devices.rs  log_anomaly.rs  main.rs  network_log.rs  stock_market.rs  temperature_sensor.rs  word_count.rs
fluxus-runtime/: Cargo.toml  README.md
fluxus-runtime/src/: lib.rs  runtime.rs  state.rs
