[package]
name = "fluxus-api"
description = "High-level API for Fluxus stream processing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
fluxus-core = { path = "../fluxus-core" }
fluxus-runtime = { path = "../fluxus-runtime" }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
