[package]
name = "fluxus-core"
version = "0.1.0"
edition = "2024"
authors = ["Fluxus Team"]
description = "Core components for Fluxus stream processing engine"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
num_cpus = "1.16"
csv = "1.3"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
