[package]
name = "fluxus-examples"
version = "0.1.0"
edition = "2021"
authors = ["Fluxus Team"]
description = "Examples for Fluxus stream processing engine"
license = "Apache-2.0"

[dependencies]
fluxus-core = { path = "../fluxus-core" }
fluxus-runtime = { path = "../fluxus-runtime" }
fluxus-api = { path = "../fluxus-api" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
