[package]
name = "fluxus-examples"
description = "Examples for Fluxus stream processing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
fluxus-core = { path = "../fluxus-core" }
fluxus-runtime = { path = "../fluxus-runtime" }
fluxus-api = { path = "../fluxus-api" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
