[package]
name = "fluxus-api"
description = "High-level API for Fluxus stream processing engine"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fluxus-core = { path = "../fluxus-core" }
fluxus-runtime = { path = "../fluxus-runtime" }
fluxus-utils = { path = "../fluxus-utils" }
fluxus-sinks = { path = "../fluxus-sinks" }
fluxus-sources = { path = "../fluxus-sources" }
fluxus-transformers = { path = "../fluxus-transformers" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
