[package]
name = "fluxus-api"
description = "High-level API for Fluxus stream processing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fluxus-core = { path = "../fluxus-core", version="0.2" }
fluxus-runtime = { path = "../fluxus-runtime", version="0.2" }
fluxus-utils = { path = "../fluxus-utils", version="0.2" }
fluxus-sinks = { path = "../fluxus-sinks", version="0.2" }
fluxus-sources = { path = "../fluxus-sources", version="0.2" }
fluxus-transformers = { path = "../fluxus-transformers", version="0.2" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4.4"
