[package]
name = "fluxus-core"
description = "Core components for Fluxus stream processing engine"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fluxus-utils = { path = "../fluxus-utils" }
fluxus-sinks = { path = "../fluxus-sinks" }
fluxus-sources = { path = "../fluxus-sources" }
fluxus-transformers = { path = "../fluxus-transformers" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
num_cpus = "1.16"
csv = "1.3"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
