[package]
name = "fluxus-core"
description = "Core components for Fluxus stream processing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fluxus-utils = { path = "../fluxus-utils", version="0.1" }
fluxus-sinks = { path = "../fluxus-sinks", version="0.1" }
fluxus-sources = { path = "../fluxus-sources", version="0.1" }
fluxus-transformers = { path = "../fluxus-transformers", version="0.1" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
num_cpus = "1.16"
csv = "1.3"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
