[package]
name = "fluxus-runtime"
description = "Runtime implementation for Fluxus stream processing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fluxus-core = "0.1.0"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4"] }
