[package]
name = "fluxus-runtime"
description = "Runtime implementation for Fluxus stream processing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fluxus-core = { path = "../fluxus-core", version="0.2" }
fluxus-utils = { path = "../fluxus-utils", version="0.2" }
fluxus-sinks = { path = "../fluxus-sinks", version="0.2" }
fluxus-sources = { path = "../fluxus-sources", version="0.2" }
fluxus-transformers = { path = "../fluxus-transformers", version="0.2" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4"] }
