[package]
name = "fluxus-sources"
description = "Source components for Fluxus stream processing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[features]
gharchive = ["dep:chrono", "dep:async-compression", "dep:url", "dep:reqwest", "dep:tokio-util"]

[dependencies]
fluxus-utils = { path = "../fluxus-utils", version="0.1" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
num_cpus = "1.16"
csv = "1.3"

tokio-util = { version = "0.7.15", optional = true } 
chrono = { version = "0.4", features = ["serde"],  optional = true }
async-compression = { version = "0.4.23", features = ["all"], optional = true }
url = { version = "2.5.4", optional = true }
reqwest = { version = "0.12.15", features = ["stream"] , optional = true}

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
tempfile = "3"