[package]
name = "fluxus"
description = "Fluxus is a lightweight stream processing engine written in Rust, designed for efficient real-time data processing and analysis."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
fluxus-api = { path = "../fluxus-api", version="0.2", optional = true }
fluxus-core = { path = "../fluxus-core", version="0.2", optional = true }
fluxus-runtime = { path = "../fluxus-runtime", version="0.2", optional = true }
fluxus-sinks = { path = "../fluxus-sinks", version="0.2", optional = true }
fluxus-sources = { path = "../fluxus-sources", version="0.2", optional = true }
fluxus-transformers = { path = "../fluxus-transformers", version="0.2", optional = true }
fluxus-utils = { path = "../fluxus-utils", version="0.2", optional = true }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
num_cpus = "1.16"
csv = "1.3"

[features]
# Include nothing by default
default = []

# enable everything
full = [
    "fluxus-api",
    "fluxus-core",
    "fluxus-runtime",
    "fluxus-sinks",
    "fluxus-sources",
    "fluxus-transformers",
    "fluxus-utils"
]
