[package]
name = "click-stream"
description = "Click stream analysis example for Fluxus stream processing engine"
publish = false
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "./README.md"

[[example]]
name = "click-stream"
path = "src/main.rs"

[dependencies]
fluxus-core = "0.1"
fluxus-runtime = { path = "../../crates/fluxus-runtime" }
fluxus-api = { path = "../../crates/fluxus-api" }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"