[package]
name = "event-timestamp"
description = "Example of how to add timestamps to events"
publish = false
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "./README.md"

[[example]]
name = "event-timestamp"
path = "src/main.rs"

[dependencies]
fluxus = { path = "../../crates/fluxus", features = ["full"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
